tests/positive/eval_order_assign.ax
module eval_order_assign;

fn next(state: *mut i32, expected: i32) -> i32 {
    if *state != expected {
        return 100;
    }
    *state = *state + 1;
    return expected;
}

export c fn main(argc: i32, argv: *mut *mut u8) -> i32 {
    var state: i32 = 0;
    var value: i32 = 0;
    value = next(&state, 0) + next(&state, 1);
    return state + value - 3;
}
